# serializer version: 1
# name: test_all_entities[0][aeotec_smart_switch_7_state.json][event.smart_switch_7_scene_id-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.smart_switch_7_scene_id',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.9-43-0-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][aeotec_smart_switch_7_state.json][event.smart_switch_7_scene_id-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Smart Switch 7 Scene ID',
    }),
    'context': <ANY>,
    'entity_id': 'event.smart_switch_7_scene_id',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][central_scene_node_state.json][event.node_51_scene_001-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyPressed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.node_51_scene_001',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene 001',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene 001',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.51-91-0-scene-001',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][central_scene_node_state.json][event.node_51_scene_001-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyPressed',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Node 51 Scene 001',
    }),
    'context': <ANY>,
    'entity_id': 'event.node_51_scene_001',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][central_scene_node_state.json][event.node_51_scene_002-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyPressed3x',
        'KeyPressed4x',
        'KeyPressed5x',
        'KeyReleased',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.node_51_scene_002',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene 002',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene 002',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.51-91-0-scene-002',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][central_scene_node_state.json][event.node_51_scene_002-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyPressed3x',
        'KeyPressed4x',
        'KeyPressed5x',
        'KeyReleased',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Node 51 Scene 002',
    }),
    'context': <ANY>,
    'entity_id': 'event.node_51_scene_002',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][enbrighten_55258_zw4002_state.json][event.zwa4002_fan_event_value-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Basic event value',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.zwa4002_fan_event_value',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Event value',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Event value',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.57-32-0-event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][enbrighten_55258_zw4002_state.json][event.zwa4002_fan_event_value-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Basic event value',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'zwa4002_fan Event value',
    }),
    'context': <ANY>,
    'entity_id': 'event.zwa4002_fan_event_value',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][enbrighten_55258_zw4002_state.json][event.zwa4002_fan_scene_001-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyPressed3x',
        'KeyReleased',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.zwa4002_fan_scene_001',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene 001',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene 001',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.57-91-0-scene-001',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][enbrighten_55258_zw4002_state.json][event.zwa4002_fan_scene_001-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyPressed3x',
        'KeyReleased',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'zwa4002_fan Scene 001',
    }),
    'context': <ANY>,
    'entity_id': 'event.zwa4002_fan_scene_001',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][enbrighten_55258_zw4002_state.json][event.zwa4002_fan_scene_002-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyPressed3x',
        'KeyReleased',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.zwa4002_fan_scene_002',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene 002',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene 002',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.57-91-0-scene-002',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][enbrighten_55258_zw4002_state.json][event.zwa4002_fan_scene_002-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyPressed3x',
        'KeyReleased',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'zwa4002_fan Scene 002',
    }),
    'context': <ANY>,
    'entity_id': 'event.zwa4002_fan_scene_002',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][fan_honeywell_39358_state.json][event.honeywell_in_wall_smart_fan_control_event_value-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Basic event value',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.honeywell_in_wall_smart_fan_control_event_value',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Event value',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Event value',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.61-32-0-event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][fan_honeywell_39358_state.json][event.honeywell_in_wall_smart_fan_control_event_value-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Basic event value',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'honeywell_in_wall_smart_fan_control Event value',
    }),
    'context': <ANY>,
    'entity_id': 'event.honeywell_in_wall_smart_fan_control_event_value',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][light_device_class_is_null_state.json][event.bar_display_cases_scene_id-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bar_display_cases_scene_id',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.45-43-0-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][light_device_class_is_null_state.json][event.bar_display_cases_scene_id-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bar Display Cases Scene ID',
    }),
    'context': <ANY>,
    'entity_id': 'event.bar_display_cases_scene_id',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-2-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id_10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID (10)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID (10)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-10-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID (10)',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id_10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_11-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id_11',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID (11)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID (11)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-11-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_11-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID (11)',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id_11',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_12-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id_12',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID (12)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID (12)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-12-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_12-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID (12)',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id_12',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_13-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id_13',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID (13)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID (13)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-13-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_13-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID (13)',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id_13',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID (3)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID (3)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-3-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID (3)',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID (4)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID (4)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-4-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID (4)',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID (5)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID (5)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-5-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID (5)',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID (6)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID (6)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-6-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID (6)',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID (7)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID (7)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-7-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID (7)',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID (8)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID (8)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-8-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID (8)',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.gp9_scene_id_9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene ID (9)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene ID (9)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.46-43-9-sceneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][touchwand_glass9_state.json][event.gp9_scene_id_9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Scene activation scene id',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'gp9 Scene ID (9)',
    }),
    'context': <ANY>,
    'entity_id': 'event.gp9_scene_id_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[1][cover_qubino_shutter_state_firmware_14_2_0.json][event.shelly_fw_14_2_0_test_cover_scene_001-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyReleased',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.shelly_fw_14_2_0_test_cover_scene_001',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene 001',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene 001',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.5-91-0-scene-001',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][cover_qubino_shutter_state_firmware_14_2_0.json][event.shelly_fw_14_2_0_test_cover_scene_001-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyReleased',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'shelly fw 14 2 0 test cover Scene 001',
    }),
    'context': <ANY>,
    'entity_id': 'event.shelly_fw_14_2_0_test_cover_scene_001',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[1][cover_qubino_shutter_state_firmware_14_2_0.json][event.shelly_fw_14_2_0_test_cover_scene_002-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyReleased',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.shelly_fw_14_2_0_test_cover_scene_002',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene 002',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene 002',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.5-91-0-scene-002',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][cover_qubino_shutter_state_firmware_14_2_0.json][event.shelly_fw_14_2_0_test_cover_scene_002-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyReleased',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'shelly fw 14 2 0 test cover Scene 002',
    }),
    'context': <ANY>,
    'entity_id': 'event.shelly_fw_14_2_0_test_cover_scene_002',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[1][enbrighten_58446_zwa4013_state.json][event.zwa4013_fan_event_value-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Basic event value',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.zwa4013_fan_event_value',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Event value',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Event value',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.19-32-0-event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][enbrighten_58446_zwa4013_state.json][event.zwa4013_fan_event_value-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Basic event value',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'zwa4013_fan Event value',
    }),
    'context': <ANY>,
    'entity_id': 'event.zwa4013_fan_event_value',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[1][enbrighten_58446_zwa4013_state.json][event.zwa4013_fan_scene_001-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyPressed3x',
        'KeyReleased',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.zwa4013_fan_scene_001',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene 001',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene 001',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.19-91-0-scene-001',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][enbrighten_58446_zwa4013_state.json][event.zwa4013_fan_scene_001-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyPressed3x',
        'KeyReleased',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'zwa4013_fan Scene 001',
    }),
    'context': <ANY>,
    'entity_id': 'event.zwa4013_fan_scene_001',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[1][enbrighten_58446_zwa4013_state.json][event.zwa4013_fan_scene_002-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyPressed3x',
        'KeyReleased',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.zwa4013_fan_scene_002',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scene 002',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scene 002',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.19-91-0-scene-002',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][enbrighten_58446_zwa4013_state.json][event.zwa4013_fan_scene_002-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'KeyHeldDown',
        'KeyPressed',
        'KeyPressed2x',
        'KeyPressed3x',
        'KeyReleased',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'zwa4013_fan Scene 002',
    }),
    'context': <ANY>,
    'entity_id': 'event.zwa4013_fan_scene_002',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[2][fan_jasco_14314_state.json][event.in_wall_fan_speed_control_500s_event_value-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Basic event value',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.in_wall_fan_speed_control_500s_event_value',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Event value',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Event value',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.24-32-0-event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[2][fan_jasco_14314_state.json][event.in_wall_fan_speed_control_500s_event_value-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'Basic event value',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'In-Wall Fan Speed Control, 500S Event value',
    }),
    'context': <ANY>,
    'entity_id': 'event.in_wall_fan_speed_control_500s_event_value',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
